--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ android {
 dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     def room_version = "2.3.0"
-
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
@@ -50,13 +49,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.apis:google-api-services-vision:v1-rev369-1.23.0'
 
-    implementation "androidx.activity:activity:1.2.2"
+
+    implementation "androidx.activity:activity:1.2.3"
 
     implementation "androidx.core:core-ktx:1.3.2"
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'com.google.android.material:material:1.4.0-beta01'
 
     implementation 'com.rmtheis:tess-two:6.0.2'
 
